<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SitWith</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- login -->
    <string name="login_label_username">Username</string>
    <string name="login_label_password">password</string>
    <string name="login_label_signin">Sign In</string>
    <string name="login_label_register">Register</string>
    <string name="login_status_logging_in">Logging in...</string>
    <string name="login_username_hint">Username</string>

    <!-- register -->
    <string name="register_label_username">Username</string>
    <string name="register_label_password">password</string>
    <string name="register_label_register">Sign In</string>
    <string name="register_status_registerring">Logging in...</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Re-enter Password</string>
    <string name="register_email_hint">Email address</string>
    <string name="register_register_link">Do not have an account? <a href="#">Register</a></string>
    <string name="app_id">1408308372760706</string>
    <string name="title_activity_restaurant__information">Restaurant_Information</string>

</resources>
