<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical" >
    
    <RelativeLayout 
  	android:id="@+id/login_div"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="15dip"        
  	android:layout_margin="15dip" 
  	android:background="@drawable/background_login_div_bg"
  	>

  	<TextView 
  		android:id="@+id/register_user_input"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="5dp"
  		android:text="@string/login_label_username"
  		style="@style/normalText"/>
  	<EditText 
  		android:id="@+id/register_username_edit"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_username_hint"
  		android:layout_below="@id/register_user_input"
  		android:singleLine="true"
  		android:inputType="text"/>
    <!-- Password text -->
    <TextView 
    	android:id="@+id/register_password_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/register_username_edit"
    	android:layout_marginTop="3dp"
    	android:text="@string/login_label_password"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/register_password_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/register_password_input"
    	android:hint="@string/register_password_hint"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    />
    <!-- Confirm Password text -->
    <TextView 
    	android:id="@+id/register_passwordConfirm_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/register_password_edit"
    	android:layout_marginTop="3dp"
    	android:text="@string/login_label_password"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/register_passwordConfirm_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/register_passwordConfirm_input"
    	android:hint="@string/register_confirm_password_hint"
    	android:password="true"
    	android:singleLine="true"
    	android:inputType="textPassword"
    />
    <!-- Email -->
    <TextView 
    	android:id="@+id/register_email_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/register_passwordConfirm_edit"
    	android:layout_marginTop="3dp"
    	android:text="@string/register_label_password"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/register_email_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/register_email_input"
    	android:hint="@string/register_email_hint"
    	android:singleLine="true"
    	android:inputType="textEmailAddress"
    />
    <!-- Login button -->

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_edit"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blue_button"
        android:text="@string/login_label_signin" />

  </RelativeLayout>

</LinearLayout>